<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_done"
        android:title="@string/action_done"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_remove"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_action_map"
        android:title="@string/action_map"
        app:showAsAction="always"
        android:visible="false"/>

</menu>