<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.solandme.simpleblog.PostActivity"
    android:orientation="vertical">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/singleImageSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:contentDescription="@string/post_image"
                android:scaleType="fitXY"
                android:src="@mipmap/add_btn" />

            <EditText
                android:id="@+id/singleTitleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/post_title"
                android:maxLines="1"
                android:padding="15dp" />


            <EditText
                android:id="@+id/singleDescField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/input_outline"
                android:ems="10"
                android:hint="@string/post_description"
                android:inputType="textMultiLine"
                android:padding="15dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/singleRemoveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/remove_post"
        android:textColor="@color/colorWhite"
        android:visibility="gone" />



</LinearLayout>
